--- a/src/Components/Bio/Css/bio-container.css
+++ b/src/Components/Bio/Css/bio-container.css
@@ -44,5 +44,45 @@
 }
 /*Mobile*/
 @media (max-width: 768px){
-
+    .bioContainer{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: var(--graybg);
+    }
+    .bio_textContainer{
+        margin: 3rem;
+        width: 85%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .bio_imgContainer{
+        width: 100%;
+        height: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+    }
+    .bio_img{
+        width: 100%;
+        height: 100%;
+    }
+    .bio_h2{
+        font: var(--subtitle);
+        color: var(--textcolor);
+    }
+    .bio_h3{
+        font: var(--strongtext);
+        color: var(--textcolor);
+    }
+    .bio_p{
+        font: var(--text);
+        color: var(--textcolor)
+    }
 }
