--- a/src/Components/Bio/Css/bio-container.css
+++ b/src/Components/Bio/Css/bio-container.css
@@ -6,7 +6,7 @@
         flex-direction: row;
         justify-content: flex-start;
         align-items: flex-start;
-        background-color: var(--graybg);
+        background-color: var(--bluemenu);
     }
     .bio_textContainer{
         margin: 3rem;
